# vex-farm-sample-vue

./: README.md  pools.json  vaults.json
backend/: basostake.js
contract/basofinances/: CMakeLists.txt  README.md
contract/basofinances/include/: basofinances.hpp
contract/basofinances/src/: basofinances.cpp
contract/vexbasotoken/: CMakeLists.txt  README.md
contract/vexbasotoken/include/: vexbasotoken.hpp
contract/vexbasotoken/src/: eosio.token.cpp  vexbasotoken.cpp
css/: app.717946f9.css  chunk-0d282e8e.efeed5b9.css  chunk-1ea07b17.b4f95e60.css  chunk-26a2b14d.19a49465.css  chunk-2ce65186.7d616aea.css  chunk-4689280a.dae055c4.css  chunk-8b3d126a.68011b80.css  home.5c656da3.css  mine.aaaedb48.css  rules.08958be8.css
js/: app.bcc84f0c.js  chunk-0d282e8e.ed67c837.js  chunk-1ea07b17.442a0b6c.js  chunk-26a2b14d.ff842ea8.js  chunk-2ce65186.edeb95de.js  chunk-2d0aec89.2993326f.js  chunk-4689280a.3ce02c5f.js  chunk-8b3d126a.37002ef9.js  chunk-vendors.1ae902ff.js  home.049551ea.js  mine.ddfd8072.js  rules.f0d5e439.js
mine/: index.html
